--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ colorlog==4.7.2
 comtypes==1.1.8
 idna==2.10
 lxml==4.6.2
-pypiwin32==223
-pyttsx3==2.90
-pywin32==300
+PyExecJS==1.5.1
 requests==2.25.1
 selenium==3.141.0
+six==1.15.0
 urllib3==1.26.3
