--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ comtypes==1.1.8
 decorator==5.0.7
 Deprecated==1.2.12
 deprecation==2.1.0
+facebook-wda==1.4.0
 frida==14.2.15
 frida-tools==9.2.4
 idna==2.10
@@ -25,13 +26,16 @@ pyelftools==0.27
 PyExecJS==1.5.1
 Pygments==2.8.1
 pyparsing==2.4.7
+pywin32==300
 requests==2.25.1
 retry==0.9.2
 selenium==3.141.0
 six==1.15.0
+tornado==6.1
 uiautomator2==2.15.0
 urllib3==1.26.3
 wcwidth==0.2.5
+weditor==0.6.3
 whichcraft==0.6.1
 wrapt==1.12.1
 xmltodict==0.12.0
