--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 adbutils==0.10.1
 apkutils2==1.0.0
+APScheduler==3.7.0
 cached-property==1.5.2
 certifi==2020.12.5
 chardet==4.0.0
@@ -9,18 +10,26 @@ colorlog==4.7.2
 comtypes==1.1.8
 csscompressor==0.9.5
 cssselect==1.1.0
+cycler==0.10.0
 decorator==5.0.7
 Deprecated==1.2.12
 deprecation==2.1.0
 facebook-wda==1.4.0
 frida==14.2.15
 frida-tools==9.2.4
+greenlet==1.1.0
 idna==2.10
+importlib-metadata==4.0.1
 javaobj-py3==0.4.2
+jieba==0.42.1
+kiwisolver==1.3.1
 logzero==1.7.0
 lxml==4.6.2
+matplotlib==3.4.2
 numpy==1.20.3
+openssl-python==0.1.1
 packaging==20.9
+pbr==5.6.0
 Pillow==8.2.0
 progress==1.5
 prompt-toolkit==3.0.18
@@ -33,17 +42,28 @@ Pygments==2.8.1
 pyparsing==2.4.7
 pyquery==1.4.3
 pysqlcipher3==1.0.4
+python-dateutil==2.8.1
+pytz==2021.1
 pywin32==300
+redis==3.5.3
 requests==2.25.1
 retry==0.9.2
 selenium==3.141.0
 six==1.15.0
+SQLAlchemy==1.4.15
+sqlalchemy-migrate==0.13.0
 sqlcipher==0.1.0
+sqlparse==0.4.1
+Tempita==0.5.2
 tornado==6.1
+typing-extensions==3.10.0.0
+tzlocal==2.1
 uiautomator2==2.15.0
 urllib3==1.26.3
 wcwidth==0.2.5
 weditor==0.6.3
 whichcraft==0.6.1
+wordcloud==1.8.1
 wrapt==1.12.1
 xmltodict==0.12.0
+zipp==3.4.1
